# ML-Engineer

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature-roadmap.md
.github/workflows/: after-build.yml  azure-login.yml  build-docker-image.yml  deploy-to-azure.yml  dev-cd-pipeline.yml  pre-commit.yml  prod-cd-pipeline.yml  test-docker-image.yml
Project_2/: README.md  cleaning_notebook.ipynb  exploration_notebook.ipynb
Project_3/: README.md  exploration_notebook.ipynb  prediction_notebook_1.ipynb  prediction_notebook_2.ipynb  score_relevance.ipynb
Projects/: README.md
Projects/Project_2/: README.md  exploration_notebook.ipynb
Projects/Project_3/: README.md
Projects/Project_4/: README.md  exploration_notebook.ipynb  simulation_notebook.ipynb  trials_notebook.ipynb
Projects/Project_5/: README.md  exploration_notebook.ipynb  test_notebook.ipynb
Projects/Project_5/api_code/: Makefile  README.md
Projects/Project_5/api_code/api/: __init__.py  constants.py  main.py  schema.py
Projects/Project_5/api_code/api/models/: .gitignore  resolve_models.py  supervised.json  tag_list.pkl
Projects/Project_5/api_code/api/semisupervised/: __init__.py  constants.py  models.py  schema.py
Projects/Project_5/api_code/azure/: docker-compose.yml
Projects/Project_5/api_code/docker/: Dockerfile  docker-compose.yml  start.sh
src/helpers/: __init__.py  model_eval.py
src/helpers/model/: __init__.py
src/helpers/plot/: __init__.py  clustering.py  pca.py
tests/: model_evaluator_test.py
(+15 files in other folders)
